# Tcm

./: .env  .gitignore  README.md  README_zh.md  main.py  pyproject.toml
app/api/: embedding.py  main.py  tts.py
app/core/: embedding.py  llm.py
app/tools/: load_docs.py  splitters.py
app/vectorstores/: config.py  vs_Milvus.py  vs_chroma.py
